plugins {
    id 'application'
}

evaluationDependsOn(':')

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

dependencies {
    implementation project(':')
    compileOnly 'io.netty:netty-buffer:4.1.100.Final'
}

def sampleMainClasses = [
    runPairRecv: 'dev.kairoscode.zlink.samples.PairRecvSample',
    runPairCallback: 'dev.kairoscode.zlink.samples.PairCallbackSample',
    runPubSubRecv: 'dev.kairoscode.zlink.samples.PubSubRecvSample',
    runPubSubCallback: 'dev.kairoscode.zlink.samples.PubSubCallbackSample',
    runDealerRouterRecv: 'dev.kairoscode.zlink.samples.DealerRouterRecvSample',
    runDealerRouterCallback: 'dev.kairoscode.zlink.samples.DealerRouterCallbackSample',
    runStreamRecv: 'dev.kairoscode.zlink.samples.StreamRecvSample',
    runStreamCallback: 'dev.kairoscode.zlink.samples.StreamCallbackSample',
    runSpotRecv: 'dev.kairoscode.zlink.samples.SpotRecvSample',
    runSpotCallback: 'dev.kairoscode.zlink.samples.SpotCallbackSample'
]

sampleMainClasses.each { taskName, mainClassName ->
    tasks.register(taskName, JavaExec) {
        group = 'application'
        classpath =
          sourceSets.main.runtimeClasspath + project(':').sourceSets.main.runtimeClasspath
        mainClass = mainClassName
        jvmArgs '--enable-native-access=ALL-UNNAMED'
    }
}
